# pyomechanics

./: .gitignore  pyproject.toml  readme.md
pyomechanics/: body.py  utils.py
scripts/: compute_joint_angles.py  create_swing_gif.py  evaluate_joint_angles.py  evaluate_joint_angles_by_session_swing.py  plot_mae.py  visualize_body_frame.py  visualize_body_frame_with_joint_angles.py  visualize_markers.py  visualize_rear_shoulder.py  visualize_rear_shoulder_joint_angles.py  visualize_session_swing_joint_angle_comparison.py
